Add books display

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <h1>Awesome books</h1>
+    <ul id="book-list">
+
+    </ul>
     <form action="" class="d-flex flex-column col-10">
         <input type="text" placeholder="Title">
         <input type="text" placeholder="Author">
