Add Button interaction

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     </ul>
     <form action="" class="d-flex flex-column col-10">
-        <input type="text" placeholder="Title">
-        <input type="text" placeholder="Author">
-        <button type="submit">Add</button>
+        <input type="text" placeholder="Title" id="title">
+        <input type="text" placeholder="Author" id="author">
+        <button type="submit" id="addBtn">Add</button>
     </form>
 </body>
 
