--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <lnpx eslint . --fixnk rel="stylesheet" href="./css/bootstrap.min.css">
-        <script src="./js/script.js" defer></script>
-        <title>Document</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <script src="./js/script.js" defer></script>
+    <title>Document</title>
 </head>
 
 <body>
