--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <script src="./js/script.js" defer></script>
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <h1>Awesome books</h1>
-    <ul id="book-list">
-
-    </ul>
-    <form action="/" class="d-flex flex-column col-10">
-        <input type="text" placeholder="Title" id="title">
-        <input type="text" placeholder="Author" id="author">
-        <button type="submit" id="addBtn">Add</button>
+  <body>
+    <h1 class="text-center">All Awesome books</h1>
+    <ul class="list-group" id="book-list"></ul>
+    <div class="d-flex col-4 m-auto border border-dark"></div>
+    <form action="/" class="d-flex flex-column col-12">
+      <h2 class="text-center">Add a new book</h2>
+      <input type="text" placeholder="Title" id="title" class="m-auto" />
+      <input type="text" placeholder="Author" id="author" class="m-auto" />
+      <button type="submit" id="addBtn" class="m-auto">Add</button>
     </form>
-</body>
-
+  </body>
 </html>
