--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,31 +8,54 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
     <title>Document</title>
-</head>
+  </head>
 
-<body class="container">
-    <nav class="d-flex navbar border border-1 border-dark py-0 mb-4 mt-2" id="navbar">
-        <a href="#" class="my-0 text-dark">Awesome Books</a>
-        <ul class="d-flex ms-auto lists my-0">
-            <li><a href="#book-list" class="mx-1">List |</a></li>
-            <li><a href="#addNew" class="mx-1">Add New |</a></li>
-            <li><a href="#contact" class="mx-1">Contact</a></li>
-        </ul>
+  <body class="container">
+    <nav
+      class="d-flex navbar border border-1 border-dark py-0 mb-4 mt-2"
+      id="navbar"
+    >
+      <a href="#" class="my-0 text-dark">Awesome Books</a>
+      <ul class="d-flex ms-auto lists my-0">
+        <li><a href="#book-list" class="mx-1">List |</a></li>
+        <li><a href="#addNew" class="mx-1">Add New |</a></li>
+        <li><a href="#contact" class="mx-1">Contact</a></li>
+      </ul>
     </nav>
-    <section class="d-none">
-        <h1 class="text-center">All Awesome books</h1>
-        <ul class="list list-group" id="book-list"></ul>
+    <section class="d-none" id="book-list">
+      <h1 class="text-center">All Awesome books</h1>
+      <ul class="list list-group" id="book-list"></ul>
     </section>
-    <!-- <div class="d-flex col-4 m-auto border-top border-dark my-3"></div> -->
-    <section>
-        <!-- <h1 class="text-center">Add a new book</h1> -->
-        <form action="/" class="form-group d-flex flex-column justify-content-center m-auto col-4 col-md-4">
-            <h2 class="text-center">Add a new book</h2>
-            <input type="text" placeholder="Title" id="title" class="m-auto form-control mb-2" />
-            <input type="text" placeholder="Author" id="author" class="m-auto mb-2 form-control" />
-            <button type="submit" id="addBtn" class="ms-auto">Add</button>
-        </form>
+    <section id="addNew">
+      <form
+        action="/"
+        class="form-group d-flex flex-column justify-content-center m-auto col-4 col-md-4"
+      >
+        <h2 class="text-center">Add a new book</h2>
+        <input
+          type="text"
+          placeholder="Title"
+          id="title"
+          class="m-auto form-control mb-2"
+        />
+        <input
+          type="text"
+          placeholder="Author"
+          id="author"
+          class="m-auto mb-2 form-control"
+        />
+        <button type="submit" id="addBtn" class="ms-auto">Add</button>
+      </form>
     </section>
-</body>
-
+    <section class="d-none" id="contact">
+      <h2>Contact information</h2>
+      <p>Do have any questions or you just want to say "Hello"?</p>
+      <p>You can reach out to us!</p>
+      <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: 0043586534422</li>
+        <li>Our address: Streetname 22, 84503 City, Country</li>
+      </ul>
+    </section>
+  </body>
 </html>
