--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     >
       <a href="#" class="my-0 text-dark">Awesome Books</a>
       <ul class="d-flex ms-auto lists my-0">
-        <li><a href="#book-list" class="mx-1">List |</a></li>
+        <li><a href="#list" class="mx-1">List |</a></li>
         <li><a href="#addNew" class="mx-1">Add New |</a></li>
         <li><a href="#contact" class="mx-1">Contact</a></li>
       </ul>
     </nav>
-    <section class="d-none" id="book-list">
+    <div class="date col-7 ms-auto mb-3 text-end"></div>
+    <section class="d-none" id="list">
       <h1 class="text-center">All Awesome books</h1>
       <ul class="list list-group" id="book-list"></ul>
     </section>
@@ -57,5 +58,8 @@
         <li>Our address: Streetname 22, 84503 City, Country</li>
       </ul>
     </section>
+    <footer class="fixed-bottom border border-1 border-dark">
+      <p class="my-0">Copyright</p>
+    </footer>
   </body>
 </html>
