--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/bootstrap.min.css" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <!-- <link rel="stylesheet" href="./css/bootstrap.min.css" /> -->
+  <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   <title>Books</title>
 </head>
 
@@ -45,7 +45,7 @@
   <footer class="fixed-bottom border border-1 border-dark">
     <p class="my-0">Copyright</p>
   </footer>
-  <script type="module" src="./index.js"></script>
+  <!-- <script type="module" src="./index.js"></script> -->
 </body>
 
 </html>
