--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <title>Books</title>
 </head>
 
-<body class="container">
-  <nav class="d-flex navbar border border-1 border-dark py-0 mb-4 mt-2" id="navbar">
+<body class="container-fluid">
+  <nav class="d-flex navbar border border-1 border-dark py-1 px-2 mb-4 mt-2" id="navbar">
     <a href="#" class="my-0 text-dark">Awesome Books</a>
     <ul class="d-flex ms-auto lists my-0">
       <li><a href="#list" class="mx-1">List |</a></li>
@@ -25,7 +25,8 @@
     <ul class="list list-group" id="book-list"></ul>
   </section>
   <section id="addNew">
-    <form action="/" class="form-group d-flex flex-column justify-content-center m-auto col-4 col-md-4">
+    <form action="/"
+      class="form-group d-flex flex-column justify-content-center m-auto col-12 col-sm-8 col-md-6 col-lg-4">
       <h2 class="text-center">Add a new book</h2>
       <input type="text" placeholder="Title" id="title" class="m-auto form-control mb-2" />
       <input type="text" placeholder="Author" id="author" class="m-auto mb-2 form-control" />
@@ -43,7 +44,7 @@
     </ul>
   </section>
   <footer class="fixed-bottom border border-1 border-dark">
-    <p class="my-0">Copyright</p>
+    <p class="mb-0 p-2">No Copyright</p>
   </footer>
   <!-- <script type="module" src="./index.js"></script> -->
 </body>
