--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <li><a href="#contact" class="mx-1">Contact</a></li>
     </ul>
   </nav>
-  <div class="date col-7 ms-auto mb-3 text-end"></div>
+  <div class="date col-7 ms-auto mb-4 text-end"></div>
   <section class="d-none" id="list">
     <h1 class="text-center">All Awesome books</h1>
     <ul class="list list-group" id="book-list"></ul>
@@ -33,18 +33,20 @@
       <button type="submit" id="addBtn" class="ms-auto">Add</button>
     </form>
   </section>
-  <section class="d-none" id="contact">
-    <h2>Contact information</h2>
-    <p>Do have any questions or you just want to say "Hello"?</p>
-    <p>You can reach out to us!</p>
-    <ul>
-      <li>Our e-mail: mail@mail.com</li>
-      <li>Our phone number: 0043586534422</li>
-      <li>Our address: Streetname 22, 84503 City, Country</li>
-    </ul>
+  <section class="d-none d-flex justify-content-center" id="contact">
+    <div>
+      <h2>Contact information</h2>
+      <p>Do have any questions or you just want to say "Hello"?</p>
+      <p>You can reach out to us!</p>
+      <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: 0043586534422</li>
+        <li>Our address: Streetname 22, 84503 City, Country</li>
+      </ul>
+    </div>
   </section>
   <footer class="fixed-bottom border border-1 border-dark">
-    <p class="mb-0 p-2">No Copyright</p>
+    <p class="mb-0 p-2 text-center">No Copyright</p>
   </footer>
   <!-- <script type="module" src="./index.js"></script> -->
 </body>
