Update loading display

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
   <title>Books</title>
 </head>
 
+<style>
+  .d-none {
+    display: none;
+  }
+</style>
+
 <body class="container-fluid">
   <nav class="d-flex navbar border border-1 border-dark py-1 px-2 mb-4 mt-2" id="navbar">
     <a href="#" class="my-0 text-dark">Awesome Books</a>
