Refactor webpack bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,14 @@
   <!-- <link rel="stylesheet" href="./css/bootstrap.min.css" /> -->
   <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   <title>Books</title>
+  <style>
+    .d-none {
+      display: none;
+    }
+  </style>
 </head>
 
-<style>
-  .d-none {
-    display: none;
-  }
-</style>
-
-<body class="container-fluid">
+<body class="container-fluid d-none">
   <nav class="d-flex navbar border border-1 border-dark py-1 px-2 mb-4 mt-2" id="navbar">
     <a href="#" class="my-0 text-dark">Awesome Books</a>
     <ul class="d-flex ms-auto lists my-0">
